--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 
 <body>
 
-  <header>
+  <header class="clearfix2">
     <h1 id="top" class="page-title">Alex Perry</h1>
-    <ul class="main-nav">
+    <ul class="main-nav clearfix">
       <li><a href="#top">Home</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </header>
 
-  <div class="intro-content wrapper">
+  <div class="intro-content wrapper clearfix">
     <img id="intro-image" src="images/responsive-layout-profile.png" alt="A proflie photo of the 
     student.">
 
-    <p>Hi! I'm a front-end web developer who loves responsive design and css. I
+    <p class="intro-paragraph">Hi! I'm a front-end web developer who loves responsive design and css. I
       recently finished a degree in front-end web development at Treehouse and am
       excited to put all my skills to use!</p>
   </div>
 
   <div id="portfolio" class="midsection">
 
-    <div class="main-content wrapper">
+    <div class="main-content wrapper clearfix">
 
       <h3 class="main-content-heading">Portfolio</h3>
 
@@ -91,19 +91,31 @@
   </div>
 
   <footer class="main-footer">
-    <h3 id="contact">Contact</h3>
-    <p>If you're interested in chatting or want more information about what
-      I've been working on, I'd love to hear from you!</p>
+    <div class="footer-wrapper">
 
-    <div class="personal-info">
-      <p>Phone &nbsp;&nbsp;<strong>+1 (111) 555-1234</strong></p>
-      <p>Email &nbsp;&nbsp;<strong>email@yoursite.com</strong></p>
+      <h3 id="contact">Contact</h3>
+
+      <p>If you're interested in chatting or want more information about what
+        I've been working on, I'd love to hear from you!</p>
+
+      <div class="personal-info">
+        <p>Phone &nbsp;&nbsp;<strong>+1 (111) 555-1234</strong></p>
+        <p>Email &nbsp;&nbsp;<strong>email@yoursite.com</strong></p>
+      </div>
+
     </div>
 
-    <hr>
 
-    <p class="footer-name">Alex Perry</p>
-    <a class="back-to-top" href="#top">Back to Top</a>
+    <div class="bottom-wrapper">
+      <hr>
+
+      <p class="footer-name">Alex Perry</p>
+      <a class="back-to-top hidden-second" href="#top">Back to Top</a>
+      <a class="bottom-to-home hidden-first" href="#top">Home</a>
+      <a class="bottom-to-portfolio hidden-first" href="#portfolio">Portfolio</a>
+      <a class="bottom-to-contact hidden-first" href="#contact">Contact</a>
+
+    </div>
 
   </footer>
 
